# xGPT.One

./: .env-template  .favorites.json  .gitignore  README.md  docker-compose.yaml  main.sh  menu_colors.json  menu_colors.py  pyproject.toml  test.py
.dev/: dev.sh  text_tmp.md
.devcontainer/: init.sh
api/ingestion/: gpt4all_ingestion.py
apps/: docker-compose.yml
apps/agents/superagi/: README.md  run.sh
apps/assistant/: README.md
apps/assistant/chatgpt-ai-template-main/: package.json  tsconfig.json
apps/chatbots/assistant/: docker-compose.yaml
apps/coder/devops/: docker-compose.yml  env-template.yaml  env.yaml
apps/coder/gpt-pilot/: docker-compose.yaml
apps/low-coder/flowise/: run.sh
apps/low-coder/langflow/: run(ToDO).sh
config/: db.yml
config/prompts/: codemaster.md  handover.md
config/streamlit/: apps_config.json  color_config.json  footer_config.json  mlearning_config.json  session_state_initializer.json  tools_config.json
datastore/data/milvus/: docker-compose.yaml
datastore/data/mysql/: docker-compose.yml
datastore/data/weaviate/: README.md  convert_ipynb_to_myst.py  delete_non_md_files.py  orchestrator.py  remove_jupyter_text.py
datastore/filemanager/: docker-compose.yaml  tinyfilemanager.php
datastore/milvus/: docker-compose.yml  milvus.sh
datastore/postgresql/: docker-compose.yml
datastore/weaviate/: build_data_lake.py  cleanup_code.py  convert_py_to_md.py  langchain_repo.py  remove_empty_directories.py
datastore/weaviate/utils/: config.py  weaviate_config.py
docs/: FAQ.md  work.todo
docs/charactar/fun/: dozar.md
docs/chunks/: manually_chunk.md  translate_chunk.md
docs/code/: CodeGPT.v4.md  code_with_rules.md  convert_code_and_framework.md
docs/components/: dashboard.md
docs/db_diagram/: xGPT.sql
docs/ideas/: We-AI.md
docs/learn/: annotated-text.py  dragable_grids.py  file_upload.py  hydralit_components.py  spacy.py  streamlit_elements.py
docs/page/: header.md
docs/rules/beautyfing/: vscode.colored_regions.md
docs/streamlit/archive/: streamlit.real.time.data.md  streamlit.speckle.md  streamlit.theming.md
docs/streamlit/scripts/: chat.py  hydralit_components.py  spacy.py  streamlit-option-menu.py
docs/streamlit/toturials/: langchain_flan_fastchat.md
docs/tests/: finanzplan.md
frontend/: beautyCode.md  dashboard_layout.json  main.py  requirements.txt  style.css
frontend/.streamlit/: config.toml
frontend/.streamlit/streamlit/: config.toml  config.yaml  db_init_rules.json  menu_config.json  secrets.toml  session_state_initializer.json
frontend/.test/: app.py  test.py
frontend/components/: controlsidebar.py  db_init.py  default.py  defaultcopy.py  header.py  header_v2.py  headernew copy.py  headernew.py  style_base.toml  style_process.py  xdash.py  xdatastore copy.py  xdatastore.py  xdatastore_backup.py  xforms.py  xheader.py  xheader_test.py  xhelper.py  xinit_db.py  xinit_page.py  xlayout.py  xpaper copy.py  xpaper.py
frontend/components/archive/: floating_window.py  header.py  headernew copy.py  headernew.py  (+5 more)
frontend/pages/: 1_apps.py  1_assistant.py  1_datastore.py  1_settings.py  99_helper_itemgenui.py  all_st_functions.py  assistant.py  chat_single.py  home.py  iframe.py  page_styler.py  promptmanager.py  send_chadcode.py  test.py  test_datastore.py  test_functions_db.py  test_style.py
frontend/pages copy/: assistant.py  demogpt.py  home.py  settings.py  test.py  wiki_0_research_assistant.py
frontend/styles/: custom.css
helper/clean/: cleanDocker_and_run.sh  cleanGit.sh  kill_port_8501_2.sh  kill_process_port.sh  remove_files.py
helper/converter/: hash_password.py  html.rm_unzip.sh  png_toVector.py  removebg.py  streamlit_stylescanner.py
helper/css/: color_generator.py  extract_and_save_css.py
helper/docker/: docker-compose.yml  push_container_image.sh
helper/installer/: install_git-lfs.sh
helper/pdf/: Folder2PDF_v0.1.py  Folder2PDF_v0.2.py
helper/python/: install.sh
helper/report/: tree_info.py
helper/robot/: summ_readme.md
helper/setup/: build_docker.sh  build_docker_compose.sh  clean_docker.sh  display_header.sh  go.mod  go.sh  go.sum  init_environment.sh  load_env.sh  main.go  menu.go  run_docker.sh  run_local_assist.sh  run_local_db.sh  run_local_dev.sh  test.go
helper/translate/: translateFolder.py
resources/styleguides/: AxCodeStyleGuide.ipynb  AxCodeStyleGuide.md
server/: ai-plugin.json  main.py
test/: test.css  test.html  test_updated.html
test/_DataURI/: data.33d5f9bfbba7b.txt  data.69926f416d63b.txt
(+203 files in other folders)
