[tool.poetry]
name = "xGPT.One"
version = "0.0.7"
description = "Unleash the power of AI"
authors = ["V.S. <ax2@xgpt.one>"]
readme = "README.md"
packages = [{include = "server"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
streamlit = "^1.26.0"
streamlit-authenticator = "^0.2.3"
pandas = "^2.1.0"
weaviate-client = "^3.24.1"
streamlit-elements = "0.1.0"
watchdog = "^3.0.0"
bcrypt = "^4.0.1"
requests = "2.31.0"
langchain = "^0.0.292"
python-dotenv = "1.0.0"
tiktoken = "^0.5.1"
rich = "^13.5.2"
poetry = "^1.6.1"
markdown = "^3.4.4"
luigi = "^3.3.0"
notebook = "^7.0.3"
jupytext = "^1.15.1"
bs4 = "^0.0.1"
tqdm = "^4.66.1"
unstructured = {extras = ["all-docs"], version = "^0.10.16"}
pydantic = ">=1,<2"
logging = "^0.4.9.6"
streamlit-on-hover-tabs = "^1.0.1"
streamlit-pydantic = "^0.6.0"
streamlit-antd-components = "^0.2.1"
streamlit-option-menu = "^0.3.6"
streamlit-modal = "^0.1.0"
streamlit-extras = "^0.3.2"
st-btn-select = "^0.1.2"
streamlit-tailwind = "^0.1.0"
hydralit-components = "^1.0.10"
towhee = "^1.1.2"
pymilvus = "^2.3.1"
fastapi = "^0.103.1"
spacy-streamlit = "^1.0.6"
pipreqs = "^0.4.13"
fschat = "^0.2.29"
sentence-transformers = "^2.2.2"
nltk = "^3.8.1"
uvicorn = "^0.23.2"
starlette = ">=0.27.0,<0.28.0"
sqlalchemy = "^2.0.21"
accelerate = "^0.23.0"
spacy = "^3.6.1"
pymupdf = "^1.23.3"
pathlib = "^1.0.1"
numexpr = "^2.8.7"
pgvector = "^0.2.3"
websockets = "^11.0.3"
transformers = "^4.33.2"
modelscope = "^1.9.1"
streamlit-chatbox = "^1.1.9"
streamlit-aggrid = "^0.3.4.post3"
rapidocr-onnxruntime = "^1.3.7"
towhee-models = "^1.1.2"
urllib3 = "1.26.6"
pycryptodome = "^3.19.0"
pdfplumber = "^0.10.2"
hydralit = "^1.0.14"
loguru = "^0.7.2"
omegaconf = "^2.3.0"
aleph-alpha-client = "^3.5.0"
pypdf = "^3.16.2"
python-multipart = "^0.0.6"
jinja2 = "3.1.2"
grpcio = "^1.58.0"
grpcio-tools = "^1.58.0"
gpt4all = "^1.0.12"
pytermgui = "^7.7.0"
seaborn = "^0.13.0"
plotly = "^5.17.0"
llama-index = "0.5.4"
tenacity = "^8.2.3"
docx2txt = "^0.8"
pypdf2 = "^3.0.1"
arrow = "^1.3.0"
pinecone-client = "^2.2.4"
pytest-asyncio = "^0.21.1"
redis = "^5.0.1"
python-pptx = "^0.6.21"
mysql-connector-python = "^8.1.0"
rust = "^1.3.1"
blessed = "1.20.0"
certifi = "2023.5.7"
charset-normalizer = "3.2.0"
colorama = "0.4.6"
distro = "1.8.0"
idna = "3.4"
markupsafe = "2.1.3"
peewee = "3.16.2"
prompt-toolkit = "3.0.39"
psycopg2-binary = "2.9.6"
python-editor = "1.0.4"
questionary = "1.10.0"
readchar = "4.0.5"
regex = "2023.6.3"
#six = "1.16.0"
#termcolor = "2.3.0"
#wcwidth = "0.2.6"
#yaspin = "2.4.0"
asyncpg = "^0.28.0"
#e2b = "^0.7.2"
#stqdm = "^0.0.5"
streamlit-code-editor = "^0.1.10"
extra-streamlit-components = "^0.1.60"
click = "^8.1.7"
streamlit-dynamic-tabs = "^0.0.3"
streamlit-cardselectable = "^0.0.4"
#streamlit-pills = "^0.3.0"
st-click-detector = "^0.1.3"
numpy = "^1.26.0"
scipy = "^1.11.3"
matplotlib = "^3.8.0"
streamlit-ace = "0.1.1"
streamlit-card = "^0.0.61"
streamlit-float = "^0.3.2"
arize-phoenix = "^0.0.49"
openai = "^0.28.1"
gcsfs = "^2023.9.2"
#postgrest-py = "^0.10.6"
css-generator = "^0.1.1"
rembg = "^2.0.52"
selenium = "^4.15.2"
colour = "^0.1.5"
selenium-chrome = "^0.0.29"


[tool.poetry.group.dev.dependencies]
httpx = "^0.23.3"
#pytest = "7.2.1"
#pytest-cov = "4.0.0"
#mypy = "^1.4.1"
pylint = "^2.17.4"
coverage = "^7.2.7"
types-urllib3 = "^1.26.25.14"
lxml-stubs = "^0.4.0"
pandas-stubs = "^2.0.2.230605"
#types-pillow = "^10.0.0.2"
#types-pymysql = "^1.1.0.1"
#types-pyyaml = "^6.0.12.11"
#types-beautifulsoup4 = "^4.12.0.5"
#types-cachetools = "^5.3.0.6"
#types-google-cloud-ndb = "^2.1.0.8"
#types-protobuf = "^4.23.0.2"
#types-psutil = "^5.9.5.16"
#types-psycopg2 = "^2.9.21.11"
#types-python-dateutil = "^2.8.19.14"
#types-pytz = "^2023.3.0.0"
#types-redis = "^4.6.0.3"
#types-regex = "^2023.6.3.1"
#types-requests = "^2.31.0.2"
#types-toml = "^0.10.8.7"
#types-tqdm = "^4.65.0.2"
#types-tzlocal = "^5.0.1.1"

[tool.settings]
known_third_party = ["aleph_alpha_client", "dotenv", "fastapi", "gpt4all", "httpx", "jinja2", "langchain", "loguru", "numpy", "omegaconf", "openai", "pydantic", "pytest", "qdrant_client", "requests", "starlette", "streamlit"]

[tool.poetry.scripts]
start = "server.main:start"
dev = "local_server.main:start"

[tool.poetry.extras]
postgresql = ["psycopg2cffi"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
asyncio_mode="auto"